--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="./public/stylesheets/style.css" />
   </head>
   <body>
-    <section id="table"></section>
+    <section id="table">
+      <div id="mashImage"></div>
+      <div id="steakImage"></div>
+      <div id="brusselSproutsImage"></div>
+    </section>
     <hr />
     <section id="steps">
       <ol id="mashPotatoes">
